AI Improvement
- Combat AI way more dynamic
- Switched to a different pre-defined Bot Arena System